# examensarbete

./: .gitignore  A.txt  CMakeLists.txt  README.md  dörrar åt motsats riktning.txt  fpm.toml  howToCompile  main  möte notes.txt  resultat  todo.txt
app/: .outputAllEnergiesDiag.txt.swp  13to14MeV.txt  allEnergiesMM.txt  allEnergiesMMDifferentProb.txt  howToCompile  main  main.f90  main2.f90  outputAllEnergiesDiag.txt
data/:  As.txt  *  1  2  3  4  5  6  7  8  9  As.txt  RUN-1  RUN-10  RUN-11  RUN-12  RUN-13  RUN-14  RUN-15  RUN-16  RUN-17  RUN-18  RUN-19  RUN-2  RUN-20  RUN-3  RUN-4  RUN-5  RUN-6  RUN-7  RUN-8  RUN-9  fusion-fission.txt  gamma  guess1  nofusion-fission.txt  pdf
docs/: howToCompile.txt  möte notes.txt  möte.txt  resultat.txt  todo.txt
results/: run2againmassdist.txt
src/: denseMatrix.f90  dlap.f90  fileUtils.f90  linearInterpolation.f90  markovMatrixExamples.f90  markovSolver.f90  markovSparse.f90  mgmres.f90  potsurf.f90  result_module.f90  solverBase.f90  sparse.f90  sparseFromPotSurf.f90  sparseMatrix.f90  twoDimensionMarkov.f90
src/matlab/: PDFinterpolator.m  compareRandomWalkMarkov.m  eigenvalues.m  explore5D.m  getCoord.m  getIndex.m  getMiddleCell.m  linkCells.m  makeHeatMap.m  markov.m  massAssymetry.m  plot5DprobabilityDensity.m  testLinSolve.m
src/python/: plotProbabilityDensity.py  readMatrixFromFile.py
test/: check.f90  github.pub  testArpack  testArpack.f90  testLinearInterpolation.f90  testParMat  testParMat.f90  testResult.f90  testSolver  testSolver.f90  testSparseMatrix  testSparseMatrix.f90  testmgmres  testmgmres.f90  testomp  testomp.f90
